<resources>
    <string name="app_name">Santander</string>
    <string name="usuario_logado">Olá Gustavo</string>
    <string name="agencia_usuario">Ag 2050</string>
    <string name="Numero_conta_usuario">CC 0549782-9</string>
    <string name="Saldo">Saldo Disponível</string>
    <string name="valor_conta">R$ 3.200,00</string>
    <string name="label_saldo_limite">Saldo + Limite:</string>
    <string name="mostra_extrato">Ver Extrato</string>
    <string name="pagar_label">Pagar</string>
    <string name="txt_transferencia">Transferência</string>
    <string name="txt_recarga">Recarga</string>
    <string name="txt_cartao_final">Cartão final</string>
</resources>